[package]
name = "mividtim_minigrep"
version = "0.1.0"
edition = "2021"
description = "A very simple version of the grep utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mividtim/minigrep"
authors = ["Tim Garthwaite <tim@garthwaite.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
